 * added --sort and --sort-basename (TODO: r669)
 * changed meaning of of _ignorecase, introduced _re_search_opts (TODO: r671)
 * added --load-image-descriptions-file (TODO: r672)
 * search (and jump) on image descriptions (TODO: r674)
 * EXIF tags will make it into the Image's Namespace. (TODO: r675)
 * special image variable expandos/specifiers (TODO: (undocumented) r676)

                Version 0.4

 * changed --random and introduced --random-no-seed option
 * customizable status bar file info string (--enable-custom-status-bar)
 * introduced --as-text to render printable bytes as text

                Version 0.4-beta

 * interface to the GraphicsMagic library (more graphics formats supported)
 * introduced bitwise AND and OR operators
 * support for rendering "matrix market" numerical matrix files (with librsb)
 * X mode not anymore default in aalib, available at option 
 * libjpeg usage fixes
 * libpng usage fixes (support for PNG_LIBPNG_VER>=10209)
 * documentation improvements (e.g.: fim man page is auto-generated)
 * "imlib2" X-based output device support 
 * "sdl" output device improvements (fullscreen/mouse/windowed options, I/O, ..)
 * more default consolefont options (e.g.: hardcoded consolefonts support)
 * configure option to disable the fim history file
 * improvements to scale, goto, other commands
 * improved directories reading
 * introduced --no-commandline, --no-internal-config switches
 * aggregated some commands for clarity
 * output console can be disabled at configure time
 * important fbdev bug fixes 
 * autocompletion of variable identifiers

        	Version 0.3

 * minor strchr compilation problem on some systems
 * better consolefonts support  
 * much better SDL support (different color modes)
 * 'negate' feature
 * -S, or 'sanity-check' switch 

               Version 0.3-beta-prerelease

 * auto-generated documentation: more consistency 
 * grammar specification, in man fimrc