@@ -32,6 +32,7 @@
  * search (and jump) on image descriptions (TODO: r674)
  * EXIF tags will make it into the Image's Namespace. (TODO: r675)
  * special image variable expandos/specifiers (TODO: (undocumented) r676)
+ * stat() checking of files on load can be disabled with _preload_checks (TODO: 678)
 
                 Version 0.4
 
